<resources>
    <string name="app_name">Estudo de Caso</string>
    <string name="questionnaire">Questionário</string>
    <string-array name="scenarios">
        
        <item>Um restaurante não confiável quer acesso aos seus dados de saúde para sugerir pratos adequados.</item>
        <item>Um restaurante não confiável quer acesso ao seu CPF para colocar na nota fiscal.</item>
        <item>Uma loja não confiável quer acesso ao seu e-mail para envio da NFE (nota fiscal eletrônica).</item>

        
        <item>Um restaurante não confiável quer acesso aos seus dados de saúde para informar decisões futuras de escolhas de receitas</item>
        <item>Uma loja não confiável quer acesso ao seu e-mail para envio de propagandas.</item>

        
        <item>Um restaurante não confiável quer acesso aos seus dados bancários para pagamento da conta.</item>
        <item>Um supermercado não confiável quer acesso ao endereço da sua casa para envio das compras.</item>
        <item>Uma loja não confiável quer acesso ao seu e-mail para envio do certificado de garantia de um produto.</item>

        
        <item>Um restaurante não confiável quer acesso ao seu peso para sugerir pratos adequados.</item>
        <item>Um painel eletrônico deseja informações sobre seu itinerário para dicas de caminhos alternativos.</item>

        
        <item>Um restaurante não confiável quer acesso ao seu peso para informar decisões futuras de escolhas de receitas</item>
        <item>Um painel de propaganda deseja informações sobre seu peso para seleção de propagandas.</item>

        
        <item>Um painel eletrônico deseja informações sobre a placa do seu carro para prover informações sobre restrições de circulação.</item>

        
        <item>Um restaurante não confiável quer acesso às suas preferências de comida para sugerir pratos adequados.</item>
        <item>A bomba de combustível do posto de gasolina quer informações sobre o consumo do seu carro.</item>

        
        <item>Sua rede social quer acesso às suas escolhas diárias de roupa para divulgar para os seus seguidores.</item>
        <item>Um restaurante não confiável quer acesso às suas preferências de comida para informar decisões futuras de escolhas de receitas.</item>
        <item>O compressor de ar do posto de gasolina quer informações sobre o modelo do seu carro para determinar a pressão adequada do calibrador.</item>

        
        <item>O sistema de um estacionamento deseja saber se seu carro possui um mecanismo de pagamento automático para determinar a forma de cobrança.</item>

        
        <item>A cafeteira do restaurante quer acesso aos seus dados de sono para fazer um café de acordo com a sua necessidade.</item>
        <item>A livraria quer acesso ao seu CPF para cadastro no sistema de sorteio de brindes.</item>

        
        <item>Uma farmácia quer acesso aos seus dados de sono para fazer propaganda de remédios apropriados para você</item>
        <item>O sistema do restaurante quer acesso às informações sobre suas restrições alimentares para propor um menu personalizado.</item>

        
        <item>Um serviço de táxi quer acesso ao endereço de casa para poder passar para lhe buscar</item>
        <item>Um serviço de táxi quer acesso aos seus dados bancários para poder cobrar a tarifa da corrida</item>
        <item>A farmácia quer informações sobre sua receita médica para a consulta de estoque e seleção de produto.</item>

        
        <item>Um serviço de táxi quer acesso ao endereço do seu local de trabalho para lhe fornecer uma estimativa de preço</item>
        <item>A farmácia quer informações sobre seu histórico de saúde para coleta de informações estatísticas.</item>

        
        <item>Um supermercado quer acesso aos seus dados de higiene bucal para fazer propaganda de produtos apropriados para você.</item>
        <item>Uma loja de esporte quer acesso aos seu peso para fazer propaganda de produtos apropriados.</item>
        <item>Outdoors de propaganda querem acesso às suas preferências de compras para mostrarem propagandas adequadas.</item>

        
        <item>O sistema de atendimento de uma loja quer acesso à sua data de nascimento para determinar sua prioridade de atendimento.</item>

        
        <item>Um serviço de táxi quer acesso ao seu horário de chegada no trabalho para enviar um táxi no horário mais adequado.</item>
        <item>A empresa de ar condicionado quer acesso à sua preferência de temperatura para realizar melhorias nos aparelhos.</item>
        <item>A livraria quer informações sobre sua preferência de gênero literário para propor recomendações de compras.</item>

        
        <item>Uma loja de roupa quer acesso às suas escolhas diárias de roupa para fazer propaganda adequada à você</item>
        <item>Um serviço de táxi quer acesso às suas preferências musicais para tocar músicas adequadas</item>
        <item>O sistema de refrigeração do restaurante quer informações sobre sua sensação de calor no momento para adequar a temperatura do salão.</item>

        
        <item>Uma ONG quer acesso ao seu consumo de água para sugerir planos de conservação e educação hídrica.</item>
        <item>Uma loja quer saber seu nome para cadastrá-lo na fila de atendimento.</item>

        
        <item>A sua cafeteira quer acesso aos seus dados de sono para fazer um café de acordo com a sua necessidade.</item>
        <item>A sua cozinha quer acesso aos seus dados de saúde para preparar um café da manhã adequado.</item>
        <item>Seu carro quer usar informações sobre sua localização para registro em um sistema remoto.</item>

        
        <item>O seu local de trabalho quer acesso à sua localização para permitir que seus colegas lhe encontrem facilmente.</item>
        <item>Sua cadeira no escritório quer saber sua identidade para manter histórico sobre seu peso.</item>

        
        <item>O seu médico quer acesso aos seus dados de sono para acompanhar a sua insônia.</item>
        <item>O seu médico quer acesso aos seus dados de saúde para acompanhar a sua saúde.</item>
        <item>O seu local de trabalho quer acesso à sua agenda para reservar recursos que podem ser necessários no seu dia.</item>

        
        <item>O seu sistema de despensa quer acesso aos seus dados de higiêne bucal para adicionar mais pasta de dente na sua lista de compras.</item>
        <item>O seu contador de calorias quer acesso aos dados sobre o seu peso para fazer o cálculo de calorias gastas corretamente.</item>
        <item>O seu telefone quer acesso à sua agenda para ajustar o nível do toque de acordo com as suas tarefas.</item>

        
        <item>A cantina em seu local de trabalho quer acesso a seu histórico de saúde para propor um menu específico.</item>

        
        <item>A sua cidade quer acesso aos dados de emissão de gás carbônico do seu carro para realizar um planejamento de meio ambiente.</item>
        <item>O seu sistema de entretenimento quer acesso às suas buscas mais recentes de notícias para selecionar uma programação relevante.</item>
        <item>O sistema de refrigeração do cômodo em que você está em sua casa quer saber seu tempo estimado de permanência para ajustes da refrigeração.</item>

        
        <item>Seu carro quer saber quem está dirigindo para manter informações estatísticas.</item>

        
        <item>O seu médico quer acesso aos seu número de passos para acompanhar a sua atividade física pós cirurgia.</item>
        <item>Seu carro quer informações sobre seu itinerário para determinar se tem autonomia para o percurso.</item>
    </string-array>
    <string name="missing_option">Você deve selecionar uma opção para: </string>
    <string name="missing_user_study_reason">Você esqueceu de dizer o porquê da sua escolha.</string>
    <string name="marker">I</string>
    <string name="initial_activities">Atividades\nIniciais</string>
    <string name="final_activities">Atividades\nFinais</string>
    <string name="missed_interruptions">interrupções perdidas até o momento</string>
    <string name="pending">Você marcou agora não dizendo: "%s". Você poderia elaborar mais sobre o motivo? </string>
    <string name="missing_answer">Uma resposta é necessária. \nCaso não lembre, por favor escreva \'não lembro\'.</string>
    <string name="done">Nada a fazer aqui no momento. </string>
    <string name="pending_qs_title">Atividade Pendente</string>
    <string name="pending_qs_text">Clique aqui para ir para o aplicativo.</string>
    <string name="participation_request_title">Hora de decidir!</string>
    <string name="participation_request_text">Qual opção é melhor para você agora?</string>
    <string name="participation_request_not_now">Delegue</string>
    <string name="participation_request_yes">Vamos ver</string>
    <string name="disagree">Discordo \ncompletamente</string>
    <string name="agree">Concordo \ncompletamente</string>
    <string name="irrelevant">Irrelevante</string>
    <string name="relevant">Relevante</string>
    <string name="soso">Meio relevante\nNão tenho certez</string>
    <string name="too_long">Muito longa</string>
    <string name="too_short">Muito curta</string>
    <string name="never">Nunca</string>
    <string name="choose">Escolher</string>
    <string name="delegate">Delegar</string>
    <string name="next">Avançar</string>
    <string name="save">Salvar</string>
    <string name="user_study_greeting">Agora que você tem mais informações, o que você preferiria?</string>
    <string name="not_now_text">Você escolheu não decidir e delegar a decisão para o agente mesmo sem saber mais informações.</string>
    <string name="not_now_reason">Por favor escolha o(s) motivo(s) dessa decisão.</string>
    <string name="not_now_social_expectation">Não deveria ter sido interrompido agora</string>
    <string name="not_now_activity_engagement">Estou ocupado</string>
    <string name="not_now_mood">Não estou com paciência para responder agora</string>
    <string name="not_now_frequency">Já fui muito interrompido</string>
    <string name="scenario_classification">Por favor, classifique o cenário de acordo com como você acha que você se comportaria e se sentiria. </string>
    <string name="low_sensitivity">Permitiria tranquilamente</string>
    <string name="medium_sensitivity">Permitiria incomodado</string>
    <string name="high_sensitivity">Não permitiria</string>
    <string name="decision">Considerando esse cenário e um agente inteligente eu preferiria…</string>
    <string name="missed">Durante o estudo você não esteve presente para interagir com %s notificações. Se isso acontecesse na realidade da Internet das Coisas isso implicaria que essas coisas tentaram ter acesso aos seus dados e não tiveram uma resposta.</string>
    <string name="missed_question"> Considerando essa situação de você não estar presente para responder um requerimento,  o que você preferiria?</string>
    <string name="missed1">Negar acesso independente de quem fosse, o que queria e do motivo da requisição.</string>
    <string name="missed2">Permitir acesso considerando opções padrão definidas por você (sobre quem, o que e por que motivo).</string>
    <string name="missed3">Deixar o agente de privacidade responder somente se ele tivesse uma certeza alta.</string>
    <string name="missed4">Deixar o agente de privacidade responder se ele tivesse uma certeza de média a alta.</string>
    <string name="missed5">Deixar o agente de privacidade responder independente da certeza que ele tivesse da escolha.</string>
    <string name="missed6">Permitir acesso independente de quem fosse, o que queria e do motivo da requisição.</string>
    <string name="opinion1">Houveram situações desagradáveis, engraçadas e/ou interessantes que você gostaria de compartilhar conosco?</string>
    <string name="opinion2">Você tem algum outro comentário que gostaria de fazer?</string>
</resources>