<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jessica.masterproject.ParticipationNotNowActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_now_text"
        android:id="@+id/not_now_text"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/not_now_reason"
        android:id="@+id/not_now_reason"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_below="@+id/not_now_text" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_now_social_expectation"
        android:id="@+id/not_now_social_expectation"
        android:layout_below="@+id/not_now_reason"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="5dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_now_activity_engagement"
        android:id="@+id/not_now_activity_engagement"
        android:layout_below="@+id/not_now_social_expectation"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_now_mood"
        android:id="@+id/not_now_mood"
        android:layout_below="@+id/not_now_activity_engagement"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_now_frequency"
        android:id="@+id/not_now_frequency"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_below="@+id/not_now_mood"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/not_now_save"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/not_now_frequency"
        android:layout_alignParentRight="true"
        android:onClick="saveNotNow" />

</RelativeLayout>
