<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="14dp"
            android:progress="2"
            android:max="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/missed"
            android:id="@+id/missed"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/progressBar"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/missed_question"
            android:id="@+id/missed_question"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_below="@+id/missed" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/missed_group"
            android:layout_below="@+id/missed_question"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed1"
                android:id="@+id/missed_group1"
                android:checked="false" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed2"
                android:id="@+id/missed_group2"
                android:checked="false" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed3"
                android:id="@+id/missed_group3"
                android:checked="false" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed4"
                android:id="@+id/missed_group4"
                android:checked="false"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed5"
                android:id="@+id/missed_group5"
                android:checked="false" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed6"
                android:id="@+id/missed_group6"
                android:checked="false" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:layout_gravity="right"
            android:onClick="nextFinal"
            android:layout_below="@+id/missed_group"
            android:layout_alignRight="@+id/missed_group"
            android:layout_marginBottom="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/next"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>
</ScrollView>