<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scenarios"
        android:weightSum="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="0.1"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="10dp"
            android:indeterminate="false" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scenario_classification"
            android:id="@+id/scenario_classification"
            android:layout_weight="0.1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/scenario"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choices"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_sensitivity"
                android:id="@+id/low_sensitivity"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_sensitivity"
                android:id="@+id/medium_sensitivity"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_sensitivity"
                android:id="@+id/high_sensitivity"
                android:checked="false" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/decision"
            android:id="@+id/textView32"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/decision"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:id="@+id/radioButton"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delegate"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/scenarios_next"
            android:layout_gravity="right"
            android:onClick="nextScenario"
            android:layout_marginBottom="50dp" />

    </LinearLayout>
</ScrollView>