<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.jessica.masterproject.ParticipationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fullscreen_content"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/sensitivity"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/certainty"
                android:layout_below="@+id/sensitivity"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_study_greeting"
                android:id="@+id/textView34"
                android:layout_below="@+id/certainty"
                android:layout_alignLeft="@+id/sensitivity"
                android:layout_marginTop="20dp"
                android:layout_marginRight="4dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_study_choice_group"
                android:layout_below="@+id/textView34"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose"
                    android:id="@+id/let_me_choose"
                    android:textColor="#000000" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delegate"
                    android:id="@+id/leave_me_alone"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000" />
            </RadioGroup>
        </RelativeLayout>

        <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
        <Button
            android:id="@+id/user_study_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="#000000"
            android:onClick="nextUserStudy"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/fullscreen_content" />

    </RelativeLayout>
    </ScrollView>