<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="14dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="14dp"
            android:progress="4"
            android:max="4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/opinion1"
            android:id="@+id/opinion1"
            android:layout_below="@+id/progressBar"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/opinion_text1"
            android:layout_below="@+id/opinion1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/opinion2"
            android:id="@+id/opinion2"
            android:layout_below="@+id/opinion_text1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/opinion_text2"
            android:layout_below="@+id/opinion2"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_gravity="right"
            android:onClick="nextFinal"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/opinion_text2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/save"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>
</ScrollView>